corrected the issue in wishlist

--- a/FootLand/templates/add_profile.html
+++ b/FootLand/templates/add_profile.html
@@ -196,7 +196,7 @@
             </div>
 
             <!-- Submit button for saving the profile -->
-            <button type="submit" class="btn">Save Profile</button>
+            <button type="submit" id="submit" class="btn">Save Profile</button>
         </form>
     </div>
 </div>
