--- a/FootLand/templates/user_dashboard.html
+++ b/FootLand/templates/user_dashboard.html
@@ -138,10 +138,10 @@ nav {
                             </form>
                         </li>
                         <li class="dropdown">
-                            <a href="#"><img src="{% static 'images/user.png' %}" width="30px" height="30px"></a>
+                            <a href="#"><img src="{% static 'images/user.png' %}" width="30px" height="30px"id="image"></a>
                             <div class="dropdown-content">
                                 {% if request.session.user_id %}
-                                <a href="{% url 'add_profile' %}">Welcome, {{ request.session.username }}</a>                                {% else %}
+                                <a href="{% url 'add_profile' %}" id="welcome">Welcome, {{ request.session.username }}</a>                                {% else %}
                                     <a href="{% url 'login' %}">Welcome</a>
                                 {% endif %}
                                 <a href="{% url 'my_orders' %}" id="my_orders">My Orders</a>
