add a venor user and set approval

--- a/FootLand/templates/home.html
+++ b/FootLand/templates/home.html
@@ -49,7 +49,7 @@
 
  /* Add to Wishlist button styling */
  .add-to-wishlist-btn {
-    background-color: #ff6b6b;
+    background-color: #0ce234;
     color: white;
     border: none;
     border-radius: 5px;
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="{%url 'home'%}"><img src="{%static 'images/logo.jpg'%}" width="125px"></a>
+                    <a href="{%url 'home'%}"><img src="{%static 'images/logo2.png'%}" width="125px"></a>
                 </div>
                 <nav>
                     <ul id="MenuItems">
@@ -387,7 +387,7 @@
                         <img src="{% static 'images/logo-philips.png'%}" alt="">
                     </div>
                 </div>
-            </div>
+            </div
         </div>
         
         
@@ -421,9 +421,9 @@
                     <h3>Follow us</h3>
                    <ul>
                        <li>Facebook</li>
-                       <li>Twitter</li>
+                     
                        <li>Instagram</li>
-                       <li>Youtube</li>
+                       
                     </ul>
                 </div>
                 
