--- a/FootLand/templates/login.html
+++ b/FootLand/templates/login.html
@@ -18,7 +18,7 @@
                 {% csrf_token %}
                 <div class="input-group">
                     <label for="email">Email</label>
-                    <input type="email" name="email" id="email" placeholder="johndoe@example.com" required>
+                    <input type="email" name="email" id="email" placeholder="" required>
                     <span class="validation-message">Please enter a valid email address.</span>
                 </div>
                 <div class="input-group">
