--- a/FootLand/templates/my_orders.html
+++ b/FootLand/templates/my_orders.html
@@ -241,7 +241,7 @@
                             </div>
                             <div class="order-item">
                                 <span>Total</span>
-                                <span class="total-price">${{ order.total_price }}</span>
+                                <span class="total-price">Rs: {{ order.total_price }}</span>
                             </div>
                         </div>
                     </div>
