--- a/FootLand/templates/user_dashboard.html
+++ b/FootLand/templates/user_dashboard.html
@@ -120,7 +120,7 @@ nav {
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="{%url 'home'%}"><img src="{%static 'images/logo.jpg'%}" width="125px"></a>
+                    <a href="{%url 'home'%}"><img src="{%static 'images/logo2.png'%}" width="125px"></a>
                 </div>
                 <nav>
                     <ul id="MenuItems">
